// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="mocked-styled-2 csepmpo"
>
  <div
    class="mocked-styled-4 tzy8dto"
  >
    <span
      class="mocked-styled-5 m1kjdx15"
    >
      0
    </span>
    <span
      class="mocked-styled-6 s10lyu4e"
    >
      42
    </span>
  </div>
  <button
    class="mocked-styled-1 bunojaf tn2f353 bunojaf"
    style="--bunojaf-0: dimgray;"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="mocked-styled-2 csepmpo"
>
  <div
    class="mocked-styled-3 s1oxn5sa"
  >
    🛌🛌
  </div>
  <button
    class="mocked-styled-1 bunojaf tn2f353 bunojaf"
    style="--bunojaf-0: tomato;"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="mocked-styled-2 csepmpo"
>
  <div
    class="mocked-styled-3 s1oxn5sa"
  >
    🍅
  </div>
  <button
    class="mocked-styled-1 bunojaf tn2f353 bunojaf"
    style="--bunojaf-0: tomato;"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="mocked-styled-2 csepmpo"
>
  <div
    class="mocked-styled-3 s1oxn5sa"
  >
    🛌
  </div>
  <button
    class="mocked-styled-1 bunojaf tn2f353 bunojaf"
    style="--bunojaf-0: tomato;"
  >
    Start
  </button>
</div>
`;
